# gatherer

./: .gitmodules  CMakeLists.txt
include/: gatherer.hpp  math.hpp
src/: client.cpp  path.cpp  path.hpp  renderdata.cpp  renderdata.hpp
src/client/: application.cpp  application.hpp  axesvisualizer.cpp  axesvisualizer.hpp  camera.hpp  client.cpp  filtermanager.cpp  filtermanager.hpp  gathereddata.cpp  gathereddata.hpp  imagerenderer.cpp  imagerenderer.hpp  pathsrenderer.cpp  pathsrenderer.hpp  scenerenderer.cpp  scenerenderer.hpp  selectionsphere.cpp  selectionsphere.hpp  selectionstroke.cpp  selectionstroke.hpp  selectionvolume.cpp  selectionvolume.hpp  spherefilter.cpp  spherefilter.hpp  utils.cpp  utils.hpp  windowfilter.cpp  windowfilter.hpp
src/client/shaders/: axes.frag.glsl  axes.vert.glsl  final.frag.glsl  image.frag.glsl  pathfragment.glsl  paths.frag.glsl  paths.vert.glsl  paths1.frag.glsl  paths1.vert.glsl  paths2.frag.glsl  pathvertex.glsl  scene.frag.glsl  scene.vert.glsl  scene1.frag.glsl  scene1.vert.glsl  scene2.frag.glsl  scene2.vert.glsl  scene3.frag.glsl  screenquad.vert.glsl  selectionvolume.frag.glsl  selectionvolume.tes.glsl  selectionvolume.vert.glsl  selectionvolume1.frag.glsl  selectionvolume1.tes.glsl  selectionvolume2.frag.glsl  spherefilter1.frag.glsl  spherefilter1.tes.glsl  spherefilter1.vert.glsl  spherefilter2.frag.glsl  uvworld.frag.glsl  uvworld.vert.glsl  windowfilter.frag.glsl  windowfilter.vert.glsl
